# Find

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GSSOC_CONTRIBUTOR_GUIDE.md  MIGRATION.md  README.md  compose.base.yml  compose.cpu.yml  compose.mock.yml  compose.no-ai.yml  compose.yml  docker-compose.light.yml  docker-compose.yml  plan.md
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
backend/: Dockerfile  migrate_db.py  pyproject.toml
backend/alembic/versions/: 20260629_albums.py  20260629_asset_state_columns.py  20260629_shared_links.py  20260630_app_settings.py  20260712_media_gps.py  20260714_vault_credentials_and_storage_mode.py  add_hnsw_vector_index.py
backend/src/find_api/: __init__.py  main.py
backend/src/find_api/core/: __init__.py  auth.py  compat.py  config.py  database.py  dependencies.py  hardware.py  model_manager.py  model_pack.py  queue.py  recovery.py  runtime_profile.py  sqlite_queue.py  sqlite_vec_poc.py  storage.py  storage_abstract.py  storage_factory.py  storage_local.py  storage_minio.py
backend/src/find_api/diagnostics/: __init__.py  bundle.py  redact.py
backend/src/find_api/ml/: captioner.py  clip_embedder.py  clusterer.py  face_detector.py  object_detector.py  ocr.py
backend/src/find_api/models/: __init__.py  album.py  app_setting.py  join_request.py  media.py  shared_link.py  vault.py
backend/src/find_api/routers/: album.py  auth.py  cluster.py  clusters.py  config.py  diagnostics.py  duplicates.py  feedback.py  gallery.py  map.py  people.py  search.py  shared_link.py  status.py  timeline.py  upload.py  vault.py
backend/src/find_api/services/: duplicate_service.py  query_cache.py
backend/src/find_api/utils/: exif.py
backend/src/find_api/workers/: jobs.py  processors.py  rq_worker.py  sqlite_worker.py
backend/tests/: conftest.py  test_auth.py  test_cluster_images_regression.py  test_clustering_edge_cases.py  test_diagnostics_api.py  test_diagnostics_redact.py  test_duplicate_service.py  test_exif.py  test_gallery.py  test_hardware.py  test_hybrid_embedding.py  test_map.py  test_migrate_db.py  test_model_manager.py  test_model_pack.py  test_queue_integration.py  test_release_version_script.py  test_reprocess.py  test_rq_worker.py  test_runtime_profile.py  test_search.py  test_settings.py  test_shared_mode_scoping.py  test_sqlite_queue.py  test_sqlite_vec_poc.py  test_status.py  test_storage_facade.py  test_storage_minio_urls.py  test_thumbnails.py  test_upload.py  test_vault.py
docs/: diagnostics-bundle.md  index.md  (+1 more)
(+116 files in other folders)
