[project]
name = "find-backend"
version = "1.1.3"
description = "FastAPI backend and RQ worker for Find"
license = "AGPL-3.0-only"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.135.1,<0.136",
  "uvicorn[standard]>=0.43.0,<0.44",
  "python-multipart>=0.0.31,<0.1",
  "pydantic>=2.13.1,<3",
  "pydantic-settings>=2.14.2,<3",
  "sqlalchemy>=2.0.45,<2.1",
  "alembic>=1.17.2,<2",
  "psycopg2-binary>=2.9.11,<3",
  "pgvector==0.2.4",
  "minio==7.2.3",
  "redis==5.0.1",
  "rq>=2.6.1,<3",
  "pillow>=12.2.0",
  "numpy==1.26.3",
  "piexif==1.1.3",
  "cryptography>=48.0.1,<49",
  "passlib[bcrypt]==1.7.4",
  "argon2-cffi>=23.1.0",
  "python-dotenv==1.2.2",
  "httpx>=0.28.1,<0.29",
  "aiofiles>=25.1.0,<26",
  "slowapi>=0.1.9",
]

[project.optional-dependencies]
mock = [
  "scikit-learn==1.5.0",
]
cpu = [
  "torch==2.8.0",
  "torchvision==0.23.0",
  "transformers>=5.5.0,<6",
  "open-clip-torch>=2.24.0",
  "opencv-python-headless==4.9.0.80",
  "ultralytics>=8.2.0",
  "insightface==0.7.3",
  "onnxruntime==1.23.2",
  "timm>=0.9.16",
  "einops>=0.8.0",
  "paddlepaddle>=3.2.2,<3.3",
  "paddleocr>=3.5.0,<4",
  "scikit-learn==1.5.0",
  "cython<3",
]
nvidia = [
  "torch==2.8.0",
  "torchvision==0.23.0",
  "transformers>=5.5.0,<6",
  "open-clip-torch>=2.24.0",
  "opencv-python-headless==4.9.0.80",
  "ultralytics>=8.2.0",
  "insightface==0.7.3",
  "onnxruntime-gpu==1.23.2",
  "timm>=0.9.16",
  "einops>=0.8.0",
  "paddlepaddle>=3.2.2,<3.3",
  "paddleocr>=3.5.0,<4",
  "scikit-learn==1.5.0",
  "cython<3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==0.23.3",
  "black==26.3.1",
  "ruff==0.1.14",
  "pip-audit==2.9.0",
  "scikit-learn==1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "nvidia" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "nvidia" },
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "nvidia" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
